@@ -32,6 +32,9 @@ bpostprocess
 	[\fB\-C\fR]			[\fB\-\-contigAbPaired\fR]
 	[\fB\-I\fR]			[\fB\-\-inversionsPaired\fR]
 	[\fB\-U\fR]			[\fB\-\-unpaired\fR]
+	[\fB\-x\fR \fIFILENAME\fR]	[\fB\-\-scoringMatrixFileName=\fIFILENAME\fR]
+	[\fB\-q\fR \fIINTEGER\fR]	[\fB\-\-avgMismatchQuality=\fIINTEGER\fR]
+	[\fB\-A\fR \fIINTEGER\fR]	[\fB\-\-space=\fIINTEGER\fR]
 	[\fB\-o\fR \fISTRING\fR] 	[\fB\-\-outputID=\fISTRING\fR]
 	[\fB\-d\fR \fIDIRECTORY\fR] [\fB\-\-outputDir=\fIDIRECTORY\fR]
 	[\fB\-O\fR \fIINTEGER\fR] 	[\fB\-\-outputFormat=\fIINTEGER\fR]
